deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abjad-k8s-dep
  labels:
    k8s-app: abjad-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: abjad-k8s
  template:
    metadata:
      labels:
        k8s-app: abjad-k8s
    spec:
      containers:
        - name: abjad-k8s-pod
          image: katomyomachia/abjad-k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
