service.yml
apiVersion: v1
kind: Service
metadata:
  name: abjad-k8s-svc
  labels:
    k8s-app: abjad-k8s
spec:
  selector:
    k8s-app: abjad-k8s
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
