ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abjad-k8s-ingress
spec:
  ingressClassName: haproxy
  rules:
    - host: abjad.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abjad-k8s-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - abjad.nrp-nautilus.io
