k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abjad-k8s-dep
  labels:
    k8s-app: abjad-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: abjad-k8s
  template:
    metadata:
      labels:
        k8s-app: abjad-k8s
    spec:
      containers:
        - name: abjad-k8s-pod
          image: katomyomachia/abjad-k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: abjad-k8s-svc
  labels:
    k8s-app: abjad-k8s
spec:
  selector:
    k8s-app: abjad-k8s
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abjad-k8s-ingress
spec:
  ingressClassName: haproxy
  rules:
    - host: abjad.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abjad-k8s-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - abjad.nrp-nautilus.io
